--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <script>
     var booqableOptions = {
-      company: '318a3065-26fd-4d18-ae7f-9a4f7b4ab7d8'
+      company: 'd224ce3e-cc7b-407c-bad5-cc3dabff9d59'
     };
   </script>
-  <script src="http://318a3065-26fd-4d18-ae7f-9a4f7b4ab7d8.filip-two.staging.booqable.com/assets/store/booqable_v2.js"></script>
+  <script src="https://d224ce3e-cc7b-407c-bad5-cc3dabff9d59.assets.booqable.com/v2/booqable.js"></script>
   
 </body>
 </html>
